--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
 * {
-    box-sizing: border-box;
-    vertical-align: top;
-    font-family: 'Lora', serif;
     margin : 0;
     padding : 0;
-    
+    box-sizing: border-box;
+    vertical-align: top;
+    font-family: 'Lora', serif;    
 }
 
-#wrapper1{
+#page_principale{
     
     background-image : radial-gradient(rgb(139, 195, 245), #1294b8);    
 }
+
+p{
+    font-family: 'Dosis', sans-serif;
+    font-size: 1.56em;
+    color : #363636;   
+    margin : 30px 0px;     
+}
+
 
 
 /*------------- MISE EN PAGE DU HEADER CONTENANT LE MENU -------------------------- */
 
 
 /* Mise en flex des éléments du header soit le logo de gauche, le menu et les logos réseaux sociaux */
-header{
+#header_home{
     display : flex;    
     justify-content: space-around; /*Centre horizontalement les elts menu avec de l'espace entre le bord de l'écran et les elts*/
     align-items: center;    
 }
 
-/*  Taille de la grenouille */
+/*  Taille de la grenouille en PX car c'est un logo moyen qui doit rester à sa taille.*/
 #frog{
     width : 150px;
     margin-left : 150px;    
@@ -38,7 +45,7 @@ ul{
 li{
     font-family: 'Space Grotesk', sans-serif;
     color : white;
-    font-size: 20px;    
+    font-size: 1.25em;
     list-style-type: none;
     margin-left : 20px;
     margin-right : 20px;
@@ -50,11 +57,17 @@ a{
     transition: 0.5s; /*Transition avant et après le hover*/
 }
 
-a:hover{
-    color : #fbd17e;    
+
+
+i { /*Logos font awesome avec une transition pour le changement de couleur*/
+    color : white;
+    font-size: 1.50em;
+    transition: 0.5s;    
 }
 
-
+a:hover, i:hover{
+    color : #fbd17e;    
+}
 
 
 /*---------------- SECTION 1 : ACCUEIL -------------------------------------------------*/
@@ -71,8 +84,9 @@ a:hover{
 }
 
 /* Taille du logo avec le chat sur l'ordinateur */
-#cat {
-    width : 600px;
+#cat{
+    max-width : 50%;
+    padding : 0 50px;
 }
 
 /*-Paragraphe présentation et partie suscribtion */
@@ -90,21 +104,6 @@ h1{
     font-weight : bold;
     margin : 30px 0px;    
 }
-
-h2{
-    font-size: 3em;
-    font-weight: bold;
-    /* color : #363636; */
-    font-weight : bold;
-}
-
-.p1{
-    font-family: 'Dosis', sans-serif;
-    font-size: 25px;
-    color : #363636;   
-    margin : 30px 0px;     
-}
-
 
 /* Bloc contenant le mailfield et le bouton. C'est lui qui a le background color pour
 simuler que le bouton se situe dans le formulaire de mail */
@@ -159,26 +158,30 @@ input:focus{
 
 
 #section2{
-
     display : flex;
     flex-direction: column;
     align-items: center;   
+}
 
+h2{
+    font-size : 2.2em;
+    font-weight: bold;  
+}
+
+.paragraph_sec2{
+    color:white;
+    font-size : 1.3em;
+    margin : 40px 10px;
 }
 
 .titleProducts{
-
-
     margin-top : 50px;
     margin-bottom: 50px;
     text-align: center; /*Centrage du titre et du petit paragraphe en dessous*/ 
-
 }
 
 #productsView{
-
     display : flex; /*Le but est d'aligner les 3 box */
-
 }
 
 .logoProduct{
@@ -186,49 +189,39 @@ input:focus{
 }
 
 /* Classe products qui correspond à chaque carré  */
-.products{
+.product{
 
     height : 400px;
     width : 400px;    
+    color : white;
     display : flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;    
-    border-radius: 15px;    
-    color : white;
-    background-image : radial-gradient(rgb(139, 195, 245), #1294b8); 
-    text-align: center;
-    
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top : 50px;
-    margin-bottom: 250px;
-    
+    align-items: center;  
+    background-image : radial-gradient(rgb(139, 195, 245), #1294b8);  
+    border-radius: 15px;        
+    text-align: center;  
+    margin : 50px 20px 250px 20px;
+    transition: margin-top 1.3s ease-out;
 
-   
-
-    transition: margin-top 1s ease; 
-    
     /* Bouge la box en modifiant le margin top. Ici on va le réduire pour donner la sensation
     que la box monte */
     
 }
 
-.products:hover{
-    margin-top : 10px; /* Au hover, le margin passe de 50px à 10px en 1 seconde */
+
+.product:hover{
+    margin-top : 10px; /* Au hover, le margin passe de 50px à 10px en 1.3 seconde */
 }
 
-.p2 {
-    color : white;
-    padding : 0 15px;
-}
+
 
 /* -------------------- SECTION 3 ---------------------------------- */
 
 #section3 {
     padding-top : 50px;
-    background-color: #eceaea;
-    height : 900px;
+    background-color: #eceaea;    
+    min-height: 100vh; /*La taille de la section s'adapte à ce qui est visible à l'écran et prend donc 100% de la taille visible à l'écran*/
 }
 
 
@@ -237,11 +230,10 @@ input:focus{
 /* ----------------------------------SECTION 4 : MEMBRES DE L'EQUIPE --------------------*/
 
 #section4{
+    padding-top : 50px;
     display : flex;
-    flex-direction: column;
-    
-    margin-bottom: 150px;
-    height : 600px;
+    flex-direction: column;        
+    min-height: 100vh;
 }
 
 /* Paragraphe sur l'équipe */
@@ -251,20 +243,6 @@ input:focus{
     padding : 0 30%;    
 }
 
-.p4{
-    font-family: 'Dosis', sans-serif;
-    color : grey;
-    font-size: 0.6em;
-    margin-top : 20px;
-    margin-bottom: 50px;
-}
-
-.p4b{ /*Le mot en dessous des chiffres */
-    font-size: 1em;
-    color : grey;
-    margin-bottom: 50px;
-
-}
 
 #members{
     display : flex;
@@ -275,39 +253,35 @@ input:focus{
 .profilMember{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
+    align-items: center;    
 }
-.zoom {
-    
+
+.zoom {    
     overflow: hidden;
     height : 200px;
     width : 200px;
-    border-radius: 100px;
-    
+    border-radius: 100px;    
 }   /*.photo correspond à la taille de la photo. Imgzoom c'est la div dans laquelle est la photo. Les deux doivent être de la 
     même taille pour que le hover fasse effet.*/
 
 .photo{
-
     height : 200px;
     width :200px;
     border-radius: 100px;
     transition : transform .5s ease; 
-    filter: grayscale(100%); /*Permet de mettre l'image en gris*/
+    filter: grayscale(1); /*Permet de mettre l'image en gris*/
 
-    /*La propriété transition se met sur la photo*/
-    
+    /*La propriété transition se met sur la photo*/    
 }   
 
 .photo:hover{
-
     transform: scale(1.1);   /*C'est un argument d'échelle. Au hover on zomme de 1.1 la taille initiale de .photo.*/
-    filter: grayscale(0%); /*Au hover, on met l'image en couleur classique*/
+    filter: grayscale(0); /*Au hover, on met l'image en couleur classique*/
 }
 
 b{
     font-size: 2em;
+    
 }
 
 /* Les petits sous titres au dessus des photos */
@@ -325,47 +299,34 @@ h4{     /* Les chiffres de la team */
 /* ------------------------------- SECTION 5   LETS GET STARTED----------------------- */
 
 
-#section5 {
+#section5 {    
     color : white;
     display : flex;
     align-items: center;
     flex-direction: column;    
     text-align: center;  
-    background-image : url("img/parallax.png");    
+    background-image : url("img/parallax.png"); 
+    background-repeat: no-repeat;   
     background-attachment: fixed; /*Permet l'effet de scroll*/  
-    height : 700px;
+    min-height: 100vh;
+}
+
+.text_sec5{
+    color : white;
 }
 
 #start{
-
-    background-color: rgba(0, 0, 0, 0.5);
-    height : 700px;
+    background-color: rgba(0, 0, 0, 0.5);    
     display: flex;
     flex-direction: column;
     justify-content: center; /*Centre verticalement */
-    align-items: center; /*Centre horizontalement */
-    width : 100%
-    
+    align-items: center; /*Centre horizontalement */  
+    min-height: 100vh;
+    padding : 0 40vh; /* Pour que le background opaque prenne toute la place*/       
 }
 
-.p5{
-    font-family: 'Dosis', sans-serif;
-    font-weight: bold;
-    font-size: 4em;  
-    margin-bottom: 40px;
-    
-}
-
-.p5b{
-    font-family: 'Dosis', sans-serif;
-    font-weight: bold;
-    color :rgb(213, 213, 213);
-    font-size: 1.5em;  
-    margin : 0 50px;    
-}
 
 #btn2{ /*Le bouton get started*/
-
     width : 150px;
     height : 70px;
     border : 2px solid white;
@@ -373,11 +334,40 @@ h4{     /* Les chiffres de la team */
     background-color: rgb(0, 0, 0, 0); /*Transparence du background du bouton */
     color : white;
     margin : 40px auto;
-    font-weight: bold;    
-
+    font-weight: bold;   
+    
 }
 
 #btn2:hover {
     background-color: rgba(255, 255, 255, 0.322);
 }
 
+
+/* ---------------SECTION 6 -------------------------------- */
+
+#section6{
+    padding-top : 50px;
+    background-color: #eceaea;
+    display : flex;
+    flex-direction: column;   
+    align-items: center;
+    text-align: center;
+    min-height : 100vh;
+}
+
+.marques{
+    width : 130px;
+    margin : 60px;
+    opacity : 50%;
+    transition : 0.5s;
+}
+
+.marques:hover{
+    opacity: 100%;
+}
+
+
+#logo_clients{
+    display : flex;
+    justify-content: space-around;
+}
