--- a/style.css
+++ b/style.css
@@ -3,7 +3,15 @@
     padding : 0;
     box-sizing: border-box;
     vertical-align: top;
-    font-family: 'Lora', serif;    
+    font-family: 'Lora', serif;
+    scroll-behavior: smooth; /* Pour le back to top */
+        
+}
+
+body{
+    display: grid;
+  grid-template-columns: auto;
+  
 }
 
 #page_principale{    
@@ -58,13 +66,13 @@ a{
 
 
 
-i { /*Logos font awesome avec une transition pour le changement de couleur*/
+.logo-header { /*Logos font awesome avec une transition pour le changement de couleur*/
     color : white;
     font-size: 1.50em;
     transition: 0.5s;    
 }
 
-a:hover, i:hover{
+a:hover, .logo-header:hover{
     color : #fbd17e;    
 }
 
@@ -427,7 +435,7 @@ h4{     /* Les chiffres de la team */
     align-items: center;  
 }
 
-span{
+.span-sec8{
     color : #3F8EFD;
     font-size: 2em;
     font-weight: bold;
@@ -496,3 +504,98 @@ span{
     text-align : right;
 }
 
+/*--------------------- SECTION 9 -----------------------*/
+
+.main-sec9{
+    min-height: 60vh;
+    display : flex;
+    justify-content: space-evenly;
+    
+}
+
+.img-sec9{
+    border-radius: 10px;
+    width : 400px;
+    height : 300px;
+    margin-bottom: 20px;
+}
+
+.p-sec9{
+    font-size : 1.3em;
+    width : 400px;
+}
+
+
+/*--------------------- FOOTER -----------------------*/
+
+.border-footer:hover{
+
+    border : 1.5px solid #fbd17e;   
+    
+}
+
+footer{
+    min-height : 20vh;
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+    
+    justify-content: space-evenly;
+    background-color: #363636;
+    color :#999999;
+}
+
+.span-footer{
+    margin-left : 15px;
+    margin-right : 15px;
+}
+
+.border-footer{
+    border : 1.5px solid #999999;
+    border-radius : 100px;
+    padding : 10px 13px;
+    margin : auto 20px;
+    transition: 0.5s; /*Transition avant et après le hover*/
+    
+}
+
+.logo-footer{
+    
+    width : 15px;
+    height : 20px;
+    filter: invert(65%) sepia(0%) saturate(0%) hue-rotate(330deg) brightness(94%) contrast(92%); /* Permet d'obtenir la couleur voulue via https://codepen.io/sosuke/pen/Pjoqqp */
+
+}
+
+#logos-footer{
+    display : flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* SCROLL TO TOP BTN */
+
+.top {    
+
+    place-self:end;
+    text-decoration: none;
+    padding: 20px;
+    margin-right : 20px;
+    width : 25px;
+    height : 25px;        
+    
+    background: #646060;
+    border-radius: 100px;
+
+    position: sticky;
+    bottom: 20px; 
+    box-sizing: content-box;
+  
+  }
+
+  #top-img{
+    filter: invert(99%) sepia(100%) saturate(0%) hue-rotate(265deg) brightness(110%) contrast(102%); /*Couleur de la flèche*/
+    width : 25px;
+    height : 25px;
+  }
+   
