--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ h2{
 
 
 
-/* -------------------- SECTION 3 ---------------------------------- */
+/* -------------------- SECTION 3 HOW IT WORKS---------------------------------- */
 
 
 
@@ -359,7 +359,8 @@ h4{     /* Les chiffres de la team */
 }
 
 .text_sec5{
-    color : white;    
+    color : white;
+    margin-bottom : 20px;    
 }
 
 #start{
@@ -367,7 +368,8 @@ h4{     /* Les chiffres de la team */
     background-color: rgba(0, 0, 0, 0.5);    
     display: flex;
     flex-direction: column;
-    justify-content: center; /*Centre verticalement */
+    padding-top : 70px;
+    /* justify-content: center;  */
     align-items: center; /*Centre horizontalement */  
     min-height: 50vh;
   
@@ -381,16 +383,19 @@ h4{     /* Les chiffres de la team */
     border-radius: 5px;
     background-color: rgb(0, 0, 0, 0); /*Transparence du background du bouton */
     color : white;
-    /* margin : 40px auto; */
-    font-weight: bold;      
+    margin-top : 20px;
+    font-weight: bold; 
+    transition : 0.5s;     
 }
 
 #btn2:hover {
-    background-color: rgba(255, 255, 255, 0.322);
+    background-color: rgb(255, 255, 255);
+    color : black;    
+    margin-top : 15px; 
 }
 
 
-/* ---------------SECTION 6 -------------------------------- */
+/* ---------------SECTION 6 WHAT YOUR CLIENT SAID -------------------------------- */
 
 #section6{
     padding-top : 50px;
@@ -421,7 +426,7 @@ h4{     /* Les chiffres de la team */
 
 
 
-/* --------------- SECTION 7 ---------------- */
+/* --------------- SECTION 7 WE ARE DIGITAL LANDING PAGE---------------- */
 
 
 #section7{
@@ -463,7 +468,7 @@ h4{     /* Les chiffres de la team */
 }
 
 
-/*--------------------- SECTION 8 -----------------------*/
+/*--------------------- SECTION 8 PRICING -----------------------*/
 
 
 #section8{
