add responsive (in progress)

--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
 }
 
 body{
-    display: grid;
-  grid-template-columns: auto;
+
+   display: grid;
+   grid-template-columns: auto;
   
 }
 
@@ -34,7 +35,8 @@ p{
 #header_home{
     display : flex;    
     justify-content: space-around; /*Centre horizontalement les elts menu avec de l'espace entre le bord de l'écran et les elts*/
-    align-items: center;    
+    align-items: center;
+     
 }
 
 /*  Taille de la grenouille en PX car c'est un logo moyen qui doit rester à sa taille.*/
@@ -700,3 +702,154 @@ footer{
     height : 25px;
   }
    
+/* /////////////////////////////////////////////////////////////////////////////////////////// */
+/*////////////////////////////////////////////////////////////////////////////////////////////*/
+
+/* ---------- FORMAT TABLETTE ---------------------------------------------------- */
+
+@media only screen and (max-width: 900px) {
+
+    
+    p{        
+        font-size: 2em;                   
+    }    
+    
+    
+    /*------------- MISE EN PAGE DU HEADER CONTENANT LE MENU -------------------------- */
+    
+    
+    
+    /*  Taille de la grenouille en PX car c'est un logo moyen qui doit rester à sa taille.*/
+    #frog{
+        display : none;          
+    }   
+    
+    
+    /* Retrait des puces et léger margin autour de chaque lien pour la clarté */
+    li{
+        font-size: 1.7em;        
+        margin-left : 10px;
+        margin-right : 10px;
+        margin-top : 10px;
+    }   
+    
+    
+    .logo-header { /*Logos font awesome avec une transition pour le changement de couleur*/       
+        font-size: 2em;         
+    }
+
+    #accueil{        
+        justify-content: space-evenly; 
+        padding-bottom : 0px;            
+    }
+    
+    
+    /*-Paragraphe présentation et partie suscribtion */   
+    
+    
+    h1{
+        font-size: 3em;        
+    }
+    
+       
+    
+    /* Formulaire pour le mail. le fond est transparent */
+    #mailField{
+        width : 160px;
+        height : 40px;        
+    }  
+    
+    /* -------------------------------------- SECTION 2, OUR PRODUCTS------------------------------- */
+
+
+h2{
+    font-size : 2.5em;    
+}
+
+.paragraph_sec2{    
+    font-size : 1.5em;    
+}
+
+
+
+
+/* -------------------- SECTION 3 HOW IT WORKS---------------------------------- */
+
+#section3 {     
+    min-height: 50vh; /*La taille de la section s'adapte à ce qui est visible à l'écran et prend donc 100% de la taille visible à l'écran*/
+}
+
+
+/* ----------------------------------SECTION 4 : MEMBRES DE L'EQUIPE --------------------*/
+
+
+
+/* ------------------------------- SECTION 5   LETS GET STARTED----------------------- */
+
+
+#section5 {    
+    color : white;
+    display : flex;
+    
+    flex-direction: column;    
+    text-align: center;  
+    background-image : url("img/parallax.png"); 
+    background-repeat: no-repeat;   
+    background-attachment: fixed; /*Permet l'effet de scroll*/  
+    
+}
+
+.text_sec5{
+    color : white;
+    margin-bottom : 20px;
+    margin : auto 500px;    
+}
+
+#start{
+    
+    background-color: rgba(0, 0, 0, 0.5);    
+    display: flex;
+    flex-direction: column;
+    padding-top : 70px;
+    /* justify-content: center;  */
+    align-items: center; /*Centre horizontalement */  
+    min-height: 50vh;
+  
+}
+
+
+#btn2{ /*Le bouton get started*/
+    width : 150px;
+    height : 70px;
+    border : 2px solid white;
+    border-radius: 5px;
+    background-color: rgb(0, 0, 0, 0); /*Transparence du background du bouton */
+    color : white;
+    margin-top : 20px;
+    font-weight: bold; 
+    transition : 0.5s;     
+}
+
+#btn2:hover {
+    background-color: rgb(255, 255, 255);
+    color : black;    
+    margin-top : 15px; 
+}
+
+
+
+    
+
+}
+
+/* --------------------------- FORMAT TEL PORTABLE -------------------------*/
+
+/* Media querie pour un tel portable. Le but n'est pas de recopier le CSS mais de simplement indiquer les changements. Utiliser l'inspecteur pour check. */
+
+@media only screen and (max-width: 768px) {
+
+   
+
+    
+        
+ } 
