--- a/style.css
+++ b/style.css
@@ -384,6 +384,7 @@ h4{     /* Les chiffres de la team */
     background-color: rgb(255, 255, 255);
     color : black;    
     margin-top : 15px; 
+   
 }
 
 
@@ -700,13 +701,68 @@ footer{
 
 /*---------------- SECTION 1 : ACCUEIL -------------------------------------------------*/
 
+#accueil{
+    width : 100vh;
+    justify-content: center;
+}
+
+#page_principale{
+    width : 100vh;
+}
+
+#frog {
+    display : none;
+}
+
+#header_home {
+    
+    justify-content: center;
+    align-items: center;
+
+}
+
+li{
+    font-size: 1.5em;
+    
+}
+
 /* ---------------------------- SECTION 2, OUR PRODUCTS------------------------------- */
+
+#section2{
+    width: 100vh;
+}
+
+.productsView {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.product{
+    margin: 50px 20px 50px 20px;
+    transition:  1.3s;
+    /* Bouge la box en modifiant le margin top. Ici on va le réduire pour donner la sensation
+    que la box monte */ 
+}
+
+
+.product:hover{
+    height : 450px;
+    width : 450px;  /* Au hover, le margin passe de 50px à 10px en 1.3 seconde */
+}
+
 
 
 /* -------------------- SECTION 3 HOW IT WORKS---------------------------------- */
 
+#section3{
+    width: 100vh;
+}
 
 /* ------------------------SECTION 4 : MEMBRES DE L'EQUIPE --------------------*/
+
+#section4{
+    width: 100vh;
+}
 
 #members{
     flex-direction: column;
@@ -714,15 +770,35 @@ footer{
 
 /* ---------------------- SECTION 5   LETS GET STARTED----------------------- */
 
+#section5{
+    width: 100vh;
+}
+
 
 /* ---------------SECTION 6 WHAT YOUR CLIENT SAID -------------------------------- */
+
+#section6{
+    width: 100vh;
+}
 
 
 /* --------------- SECTION 7 WE ARE DIGITAL LANDING PAGE---------------- */
 
+#section7{
+    width: 100vh;
+}
+
 /*--------------------- SECTION 8 PRICING -----------------------*/
 
+#section8{
+    width: 100vh;
+}
+
 /*--------------------- SECTION 9 OUR BLOGS -----------------------*/
+
+#section9{
+    width: 100vh;
+}
 
 /*--------------------- FOOTER -----------------------*/
 
@@ -758,11 +834,20 @@ footer{
 ul{
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 10px;
 }
 
 li{
     margin-left : 5px;
     margin-right : 5px;
+}
+
+#presentation{
+    width : 500px;
+}
+
+#accueil{
+    padding-bottom: 50px;
 }
 
 
@@ -785,10 +870,39 @@ a{
 
 .productsView {    
     flex-direction: column-reverse;
+    align-items: center;
+}
+
+.titleProducts {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 #section2{
     width: 100vh;
+}
+
+.product{
+    margin-bottom: 50px;
+    transition : none;
+}
+
+.product:hover {
+    margin-top: 0;
+}
+
+.product{
+    
+    transition:  1.3s;
+    /* Bouge la box en modifiant le margin top. Ici on va le réduire pour donner la sensation
+    que la box monte */    
+}
+
+
+.product:hover{
+    height : 450px;
+    width : 450px;  /* Au hover, le margin passe de 50px à 10px en 1.3 seconde */
 }
 
 /* -------------- SECTION 3 HOW IT WORKS---------------------------------- */
@@ -803,11 +917,55 @@ a{
     width: 100vh;
 }
 
+#team {
+    padding : 0 50px;
+}
+
+.profilMember {   
+    border-bottom: 1px solid black;
+    padding-bottom : 20px;   
+}
+
+.zoom {    
+    overflow: hidden;
+    height : 250px;
+    width : 250px;
+    border-radius: 150px;    
+    margin : auto auto;
+}  
+
+/*.photo correspond à la taille de la photo. Imgzoom c'est la div dans laquelle est la photo. Les deux doivent être de la 
+    même taille pour que le hover fasse effet.*/
+
+.photo{
+    height : 250px;
+    width : 250px;
+    
+    border-radius: 150px;
+    transition : transform .5s ease; 
+    filter: grayscale(1); /*Permet de mettre l'image en gris*/
+    /*La propriété transition se met sur la photo*/    
+}   
+
 /* ----------------------- SECTION 5   LETS GET STARTED----------------------- */
 
 #section5{
     width: 100vh;
+    
 }
+
+#start{
+    padding-bottom: 50px;
+    
+}
+
+.text_sec5 {
+    
+    padding : 0 40px;
+}
+
+
+
 
 /* ---------------SECTION 6 WHAT YOUR CLIENT SAID -------------------------------- */
 
@@ -819,16 +977,32 @@ a{
     display:block;
 }
 
+p{
+    padding : 0 20px;
+}
+
 /* --------------- SECTION 7 WE ARE DIGITAL LANDING PAGE---------------- */
 
 #section7{
     width: 100vh;
 }
 
+#creativity {
+    display : none;
+}
+
 /*--------------------- SECTION 8 PRICING -----------------------*/
 
 #section8{
     width: 100vh;
+}
+
+.price{
+    margin: 50px 20px 50px 20px;
+}
+
+.sale{
+    margin: 50px 20px 50px 20px;
 }
 
 /*--------------------- SECTION 9 OUR BLOGS -----------------------*/
@@ -841,30 +1015,24 @@ a{
     align-items: center;
 }
 
+.blog{
+    border-bottom: 1px solid black;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+}
+
+.p-sec9{
+    text-align: left;
+    padding : 0;
+}
+
 /*--------------------- FOOTER -----------------------*/
 
 footer{
+    
     width : 100vh;
+
 }
-
-
-
-
-
-
-
    
-
-    
-
-    
-   
-
-    
-
-
-   
-
-    
         
  } 
